[gd_scene load_steps=3 format=3]

[ext_resource type="Theme" uid="uid://byrv18r6jjj5l" path="res://assets/resources/black_menu_theme.tres" id="1_8hecp"]
[ext_resource type="Script" path="res://scenes/menu/audio_menu.gd" id="2_1wb5w"]

[node name="audio_menu" type="VBoxContainer"]
offset_right = 249.0
offset_bottom = 495.0
theme = ExtResource("1_8hecp")
theme_override_constants/separation = -5
script = ExtResource("2_1wb5w")
metadata/_edit_group_ = true

[node name="title" type="Label" parent="."]
layout_mode = 2
text = "Volumes"
horizontal_alignment = 1

[node name="blank" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="bgm_title" type="Label" parent="."]
layout_mode = 2
text = "Music"
horizontal_alignment = 1

[node name="bgm_slider" type="HSlider" parent="."]
layout_mode = 2
focus_previous = NodePath(".")
max_value = 1.0
step = 0.1
value = 0.5

[node name="bgm_value" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "50%"
horizontal_alignment = 1

[node name="bgs_title" type="Label" parent="."]
layout_mode = 2
text = "Environment"
horizontal_alignment = 1

[node name="bgs_slider" type="HSlider" parent="."]
layout_mode = 2
max_value = 1.0
step = 0.1
value = 0.5

[node name="bgs_value" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "50%"
horizontal_alignment = 1

[node name="sfx_title" type="Label" parent="."]
layout_mode = 2
text = "Sounds"
horizontal_alignment = 1

[node name="sfx_slider" type="HSlider" parent="."]
layout_mode = 2
max_value = 1.0
step = 0.1
value = 0.5

[node name="sfx_value" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 30
text = "50%"
horizontal_alignment = 1

[node name="blank2" type="Label" parent="."]
layout_mode = 2
theme_override_font_sizes/font_size = 20

[node name="back_button" type="Button" parent="."]
layout_mode = 2
focus_next = NodePath(".")
text = "Back"

[connection signal="value_changed" from="bgm_slider" to="." method="_on_bgm_value_changed"]
[connection signal="value_changed" from="bgs_slider" to="." method="_on_bgs_value_changed"]
[connection signal="value_changed" from="sfx_slider" to="." method="_on_sfx_value_changed"]
[connection signal="pressed" from="back_button" to="." method="_on_back_button_pressed"]
